--- a/custom_addons/om_hospital/views/patient_view.xml
+++ b/custom_addons/om_hospital/views/patient_view.xml
@@ -1,6 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<odoo>
-        <record id="view_hospital_patient_from" model="ir.ui.view">
+<odoo>  
+        <record id="view_hospital_patient_tree" model="ir.ui.view">
+            <field name="name">hospital.patient.tree</field>
+            <field name="model">hospital.patient</field>
+            <field name="arch" type="xml">
+            <tree>
+                <field name="name" string="Patient Name"/>
+                <field name="age" />
+                <field name="ref" />
+                <field name="gender" />
+            </tree>
+            </field>
+        </record>
+
+        <record id="view_hospital_patient_form" model="ir.ui.view">
             <field name="name">hospital.patient.form</field>
             <field name="model">hospital.patient</field>
             <field name="arch" type="xml">
@@ -12,11 +25,25 @@
                             <field name="age" />
                         </group>
                         <group>
+                            <field name="ref" />
                             <field name="gender" />
                         </group>
                     </group>
                 </sheet>
             </form>
+            </field>
+        </record>
+
+        <record id="view_hospital_patient_search" model="ir.ui.view">
+            <field name="name">hospital.patient.search</field>
+            <field name="model">hospital.patient</field>
+            <field name="arch" type="xml">
+            <search>
+                <field name="name" string="Patient Name" filter_domain="['|', ('name','ilike',self), ('ref','ilike',self)]"/>
+                <field name="age" />
+                <field name="ref" />
+                <field name="gender" />
+            </search>
             </field>
         </record>
          
