Archived and Unarchived

--- a/custom_addons/om_hospital/views/patient_view.xml
+++ b/custom_addons/om_hospital/views/patient_view.xml
@@ -28,6 +28,8 @@
                         <group>
                             <field name="ref" />
                             <field name="gender" />
+                            <!-- Archive -->
+                            <field name="active" invisible="1"/>
                         </group>
                     </group>
                 </sheet>
@@ -50,6 +52,9 @@
                     <filter name="filter_female" string="Female" domain="[('gender', '=', 'female')]" />
                     <separator />
                     <filter name="filter_kids" string="Kids" domain="[('age', '&lt;=', 5)]" />
+                    <separator />
+                    <!-- Achive Filter -->
+                    <filter name="filter_archived" string="Archived" domain="[('active', '=', False)]" />
                     <!-- Group by Gender -->
                     <group expand="1" string="Group By">
                         <filter string="Gender" name='group_by_gender' context="{'group_by':'gender'}"/>
