--- a/custom_addons/om_hospital/views/female_patient_view.xml
+++ b/custom_addons/om_hospital/views/female_patient_view.xml
@@ -6,7 +6,8 @@
             <field name="type">ir.actions.act_window</field>
             <field name="res_model">hospital.patient</field>
             <field name="view_mode">tree,form</field>
-            <field name="context">{}</field>
+            <!-- Get default value with context { "default_fieldname" : value} -->
+            <field name="context">{"default_gender" : 'female', 'default_age' : 25}</field>
             <!-- Apply domain as in view -->
             <field name="domain">[('gender', '=', 'female')]</field>
             <field name="help" type="html">
