Added Chatter in Patient View

--- a/custom_addons/om_hospital/views/patient_view.xml
+++ b/custom_addons/om_hospital/views/patient_view.xml
@@ -33,6 +33,12 @@
                         </group>
                     </group>
                 </sheet>
+                <!-- First manifest in depends, import 'mail' -->
+                <div class="oe_chatter">
+                    <field name="message_follower_ids"/>
+                    <field name="activity_ids"/>
+                    <field name="message_ids"/>
+                </div>
             </form>
             </field>
         </record>
