Added Searchpanel in Patient view

--- a/custom_addons/om_hospital/views/patient_view.xml
+++ b/custom_addons/om_hospital/views/patient_view.xml
@@ -65,6 +65,9 @@
                     <group expand="1" string="Group By">
                         <filter string="Gender" name='group_by_gender' context="{'group_by':'gender'}"/>
                     </group>
+                    <searchpanel>
+                        <field name="gender" select="multi" enable_counters="1"/>
+                    </searchpanel>
                 </search>
             </field>
         </record>
