--- a/custom_addons/om_hospital/views/patient_view.xml
+++ b/custom_addons/om_hospital/views/patient_view.xml
@@ -66,7 +66,7 @@
                         <filter string="Gender" name='group_by_gender' context="{'group_by':'gender'}"/>
                     </group>
                     <searchpanel>
-                        <field name="gender" select="multi" enable_counters="1"/>
+                        <field name="gender" icon="fa-users" select="multi" enable_counters="1"/>
                     </searchpanel>
                 </search>
             </field>
