--- a/custom_addons/om_hospital/views/appointment_view.xml
+++ b/custom_addons/om_hospital/views/appointment_view.xml
@@ -22,6 +22,7 @@
                     <group>
                         <group>
                             <field name="patient_ids" />
+                            <field name="gender" />
                             <field name="booking_date" />
                         </group>
                         <group>
