--- a/custom_addons/om_hospital/views/patient_view.xml
+++ b/custom_addons/om_hospital/views/patient_view.xml
@@ -7,6 +7,7 @@
             <field name="arch" type="xml">
             <tree>
                 <field name="name" string="Patient Name"/>
+                <field name="date_of_birth" />
                 <field name="age" />
                 <field name="ref" />
                 <field name="gender" />
@@ -23,6 +24,7 @@
                     <group>
                         <group>
                             <field name="name" />
+                            <field name="date_of_birth" />
                             <field name="age" />
                         </group>
                         <group>
@@ -56,8 +58,8 @@
                     <!-- Search Filter with Gender = male,female , age<= 5 -->
                     <filter name="filter_male" string="Male" domain="[('gender', '=', 'male')]" />
                     <filter name="filter_female" string="Female" domain="[('gender', '=', 'female')]" />
-                    <separator />
-                    <filter name="filter_kids" string="Kids" domain="[('age', '&lt;=', 5)]" />
+                    <!-- <separator />
+                    <filter name="filter_kids" string="Kids" domain="[('age', '&lt;=', 5)]" /> -->
                     <separator />
                     <!-- Achive Filter -->
                     <filter name="filter_archived" string="Archived" domain="[('active', '=', False)]" />
