--- a/custom_addons/om_hospital/views/patient_view.xml
+++ b/custom_addons/om_hospital/views/patient_view.xml
@@ -11,6 +11,7 @@
                 <field name="age" />
                 <field name="ref" />
                 <field name="gender" />
+                <field name="appointment_ids" />
             </tree>
             </field>
         </record>
@@ -26,6 +27,7 @@
                             <field name="name" />
                             <field name="date_of_birth" />
                             <field name="age" />
+                            <field name="appointment_ids" />
                         </group>
                         <group>
                             <field name="ref" />
