Added notebook's pages for Appointments

--- a/custom_addons/om_hospital/views/appointment_view.xml
+++ b/custom_addons/om_hospital/views/appointment_view.xml
@@ -31,6 +31,17 @@
                             <field name="appointment_time" />
                         </group>
                     </group>
+                    <!-- Notebook -->
+                    <notebook>
+                        <page string="Prescription" name="perscription">
+                            <group>
+                            </group>
+                        </page>
+                        <page string="Pharmacy" name="pharmacy">
+                            <group>
+                            </group>
+                        </page>
+                    </notebook>
                 </sheet>
                 <!-- First manifest in depends, import 'mail' -->
                 <div class="oe_chatter">
