Added Prescription HTML field

--- a/custom_addons/om_hospital/views/appointment_view.xml
+++ b/custom_addons/om_hospital/views/appointment_view.xml
@@ -34,8 +34,7 @@
                     <!-- Notebook -->
                     <notebook>
                         <page string="Prescription" name="perscription">
-                            <group>
-                            </group>
+                            <field name="prescription" string="Enter your prescription" />
                         </page>
                         <page string="Pharmacy" name="pharmacy">
                             <group>
