Added priority widget Added

--- a/custom_addons/om_hospital/views/appointment_view.xml
+++ b/custom_addons/om_hospital/views/appointment_view.xml
@@ -20,6 +20,11 @@
             <field name="arch" type="xml">
             <form>
                 <sheet>
+                    <div>
+                        <h2>
+                            <field name="priority" widget="priority" />
+                        </h2>
+                    </div>
                     <group>
                         <group>
                             <field name="patient_ids" />
