--- a/custom_addons/om_hospital/views/appointment_view.xml
+++ b/custom_addons/om_hospital/views/appointment_view.xml
@@ -33,12 +33,15 @@
                     <group>
                         <group>
                             <field name="patient_ids" />
+                            <field name="ref" />
                             <field name="gender" />
                             <field name="booking_date" />
                         </group>
                         <group>
-                            <field name="ref" />
                             <field name="appointment_time" />
+                            <!-- Buttons type : object , action -->
+                            <button name="action_test" type="object" string="Object Button"/>
+                            <button name="%(om_hospital.action_hospital_patient)d" type="action" string="Action Button"/>
                         </group>
                     </group>
                     <!-- Notebook -->
