--- a/custom_addons/om_hospital/views/appointment_view.xml
+++ b/custom_addons/om_hospital/views/appointment_view.xml
@@ -5,7 +5,8 @@
             <field name="name">hospital.appointment.tree</field>
             <field name="model">hospital.appointment</field>
             <field name="arch" type="xml">
-            <tree>
+            <!-- Tree line decoration colors -->
+            <tree decoration-success="state == 'done'" decoration-info="state in ('in_consultation','draft')">
                 <field name="patient_ids" />
                 <field name="appointment_time" />
                 <field name="ref" />
