Added activity list in Appointment tree

--- a/custom_addons/om_hospital/views/appointment_view.xml
+++ b/custom_addons/om_hospital/views/appointment_view.xml
@@ -11,6 +11,8 @@
                 <field name="appointment_time" />
                 <field name="ref" />
                 <field name="booking_date" />
+                <!-- Activity List -->
+                <field name="activity_ids" widget="list_activity" />
                 <!-- State badge decoration success,info,danger,muted,warning -->
                 <field name="state" widget="badge" decoration-success="state == 'done'" decoration-info="state in ('in_consultation','draft')" decoration-muted="state == 'cancel'" />
             </tree>
