Added resizable in prescription

--- a/custom_addons/om_hospital/views/appointment_view.xml
+++ b/custom_addons/om_hospital/views/appointment_view.xml
@@ -57,7 +57,7 @@
                     <!-- Notebook -->
                     <notebook>
                         <page string="Prescription" name="perscription">
-                            <field name="prescription" string="Enter your prescription" options="{'collaborative': true}"/>
+                            <field name="prescription" string="Enter your prescription" options="{'collaborative': true , 'resizable': true}"/>
                         </page>
                         <page string="Pharmacy" name="pharmacy">
                             <group>
