--- a/custom_addons/om_hospital/views/appointment_view.xml
+++ b/custom_addons/om_hospital/views/appointment_view.xml
@@ -45,7 +45,7 @@
                             <field name="ref" />
                             <field name="doctor_id" widget="many2one_avatar_user"/>
                             <field name="gender" />
-                            <field name="booking_date" help="Date of Booking"/>
+                            <field name="booking_date" help="Date of Booking" default_focus="1"/>
                         </group>
                         <group>
                             <field name="appointment_time" />
