--- a/custom_addons/om_hospital/views/menu.xml
+++ b/custom_addons/om_hospital/views/menu.xml
@@ -8,5 +8,12 @@
             name="Patient Details"
             parent="menu_hospital_root"
             sequence="0"/>
-       
+        <menuitem id="menu_appointment_master"
+            name="Appointments"
+            parent="menu_hospital_root"
+            sequence="20"/>
+        <menuitem id="menu_configuration"
+            name="Configuration"
+            parent="menu_hospital_root"
+            sequence="100"/>
 </odoo>
