Added color and color-picker fields in Appointments

--- a/custom_addons/om_hospital/views/patient_tag_view.xml
+++ b/custom_addons/om_hospital/views/patient_tag_view.xml
@@ -7,6 +7,8 @@
             <field name="arch" type="xml">
             <tree sample="1">
                 <field name="name" />
+                <field name="color" widget="color_picker"/>
+                <field name="color_2" widget="color" groups="base.group_no_one"/>
                 <field name="active" />
             </tree>
             </field>
@@ -23,6 +25,9 @@
                             <field name="name" />
                         </group>
                         <group>
+                            <!-- Active Toggle Widget -->
+                            <field name="color" widget="color_picker" />
+                            <field name="color_2" widget="color" groups="base.group_no_one"/>
                             <field name="active" widget="boolean_toggle"/>
                         </group>
                     </group>
