Added activity view in Appointments

--- a/custom_addons/om_hospital/views/appointment_view.xml
+++ b/custom_addons/om_hospital/views/appointment_view.xml
@@ -1,5 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>  
+ <!-- Activity View -->
+        <record id="view_hospital_appointment_activity" model="ir.ui.view">
+            <field name="name">hospital.appointment.activity</field>
+            <field name="model">hospital.appointment</field>
+            <field name="arch" type="xml">
+            <!-- Activity line decoration colors -->
+            <activity string="Appointments">
+                    <field name="patient_ids"/>
+                    <field name="ref"/>
+                    <templates>
+                        <div t-name="activity-box">
+                            <img t-att-src="activity_image('hospital_patient', 'image', record.patient_ids.raw_value)" t-att-title="record.patient_ids.value" t-att-alt="record.patient_ids.value" />
+                            <div>
+                                <field name="ref" display="full"/>
+                            </div>
+                        </div>
+                    </templates>
+                </activity>
+            </field>
+        </record>
         <!-- Tree View -->
         <record id="view_hospital_appointment_tree" model="ir.ui.view">
             <field name="name">hospital.appointment.tree</field>
@@ -106,7 +126,7 @@
             <field name="name">Appointments</field>
             <field name="type">ir.actions.act_window</field>
             <field name="res_model">hospital.appointment</field>
-            <field name="view_mode">tree,form</field>
+            <field name="view_mode">tree,form,activity</field>
             <field name="context">{}</field>
             <field name="help" type="html">
                 <p class="o_view_nocontent_smiling_face">
