Added Codeview in Prescription of Appointments

--- a/custom_addons/om_hospital/views/appointment_view.xml
+++ b/custom_addons/om_hospital/views/appointment_view.xml
@@ -83,7 +83,7 @@
                     <!-- Notebook -->
                     <notebook>
                         <page string="Prescription" name="perscription">
-                            <field name="prescription" string="Enter your prescription" options="{'collaborative': true , 'resizable': true}"/>
+                            <field name="prescription" string="Enter your prescription" options="{'collaborative': true , 'resizable': true, 'codeview' : true}"/>
                         </page>
                         <page string="Pharmacy" name="pharmacy">
                             <!-- One2many field  -->
