--- a/custom_addons/om_hospital/wizard/cancel_appointment_view.xml
+++ b/custom_addons/om_hospital/wizard/cancel_appointment_view.xml
@@ -11,6 +11,9 @@
                         <field name="appointment_id" />
                         <field name="reason" />
                     </group>
+                    <group>
+                        <field name="date_cancel" />
+                    </group>
                 </group>
                 <!-- Cancel Appointment button -->
                 <footer>
