Added sequence number for Appointment, name and default get active Appointment Id

--- a/custom_addons/om_hospital/views/appointment_view.xml
+++ b/custom_addons/om_hospital/views/appointment_view.xml
@@ -29,11 +29,11 @@
             <tree decoration-success="state == 'done'" decoration-info="state in ('in_consultation','draft')" sample="1" multi_edit="1">
                 <field name="patient_ids" />
                 <!-- Optional for dynamic tree view -->
+                <field name="name" />
                 <field name="ref" optional="show"/>
                 <field name="doctor_id" widget="many2one_avatar_user"/>
                 <field name="gender" optional="hide"/>
                 <field name="appointment_time" />
-                <field name="ref" />
                 <field name="booking_date" />
                 <!-- Activity List -->
                 <field name="activity_ids" widget="list_activity" />
@@ -52,13 +52,16 @@
                 <header>
                     <button name="action_in_consultation" string="In Consultation" class="oe_highlight" type="object" states="draft" data-hotkey="i"/>
                     <button name="action_done" string="Mark As Done" type="object" class="oe_highlight" states="in_consultation" data-hotkey="d"/>
-                    <!-- <button name="%(om_hospital.action_cancel_appointment)d" string="Cancel" type="action" states="draft,in_consultation" data-hotkey="c"/> -->
+                    <!-- <button name="%(om_hospital.action_cancel_appointment)d" context="{'default_appointment_id' : active_id}" string="Cancel" type="action" states="draft,in_consultation" data-hotkey="c"/> -->
                     <button name="action_cancel" string="Cancel" type="object" states="draft,in_consultation" data-hotkey="c"/>
                     <button name="action_draft" string="Reset to Draft" type="object" states="cancel" data-hotkey="u"/>
                     <!-- options="{'clickable': '1'}" -->
                     <field name="state" widget="statusbar" nolabel="1" statusbar_visible="draft,in_consultation,done"  options="{'clickable': '1'}"/>
                 </header>
                 <sheet>
+                    <div class="oe_title">
+                        <h1> <field name="name" /></h1>
+                    </div>
                     <!-- Priortiy Widget or Stars -->
                     <div>
                         <h2>
