Added field hide with context

--- a/custom_addons/om_hospital/views/appointment_view.xml
+++ b/custom_addons/om_hospital/views/appointment_view.xml
@@ -52,8 +52,8 @@
                 <header>
                     <button name="action_in_consultation" string="In Consultation" class="oe_highlight" type="object" states="draft" data-hotkey="i"/>
                     <button name="action_done" string="Mark As Done" type="object" class="oe_highlight" states="in_consultation" data-hotkey="d"/>
-                    <!-- <button name="%(om_hospital.action_cancel_appointment)d" context="{'default_appointment_id' : active_id}" string="Cancel" type="action" states="draft,in_consultation" data-hotkey="c"/> -->
-                    <button name="action_cancel" string="Cancel" type="object" states="draft,in_consultation" data-hotkey="c"/>
+                    <button name="%(om_hospital.action_cancel_appointment)d" context="{'default_appointment_id' : active_id,'hide_appointment': 1}" string="Cancel" type="action" states="draft,in_consultation" data-hotkey="c"/>
+                    <!-- <button name="action_cancel" string="Cancel" type="object" states="draft,in_consultation" data-hotkey="c"/> -->
                     <button name="action_draft" string="Reset to Draft" type="object" states="cancel" data-hotkey="u"/>
                     <!-- options="{'clickable': '1'}" -->
                     <field name="state" widget="statusbar" nolabel="1" statusbar_visible="draft,in_consultation,done"  options="{'clickable': '1'}"/>
