--- a/custom_addons/om_hospital/views/patient_view.xml
+++ b/custom_addons/om_hospital/views/patient_view.xml
@@ -33,7 +33,7 @@
                         </group>
                         <group>
                             <field name="ref" />
-                            <field name="gender" />
+                            <field name="gender" invisible="context.get('hide_gender')"/>
                             <field name="tag_ids" widget="many2many_tags" options="{'color_field': 'color'}"/>
                             <!-- Archive -->
                             <field name="active" invisible="1"/>
