--- a/custom_addons/om_hospital/views/appointment_view.xml
+++ b/custom_addons/om_hospital/views/appointment_view.xml
@@ -7,11 +7,11 @@
             <field name="arch" type="xml">
             <!-- Activity line decoration colors -->
             <activity string="Appointments">
-                    <field name="patient_ids"/>
+                    <field name="patient_id"/>
                     <field name="ref"/>
                     <templates>
                         <div t-name="activity-box">
-                            <img t-att-src="activity_image('hospital.patient', 'image', record.patient_ids.raw_value)" t-att-title="record.patient_ids.value" t-att-alt="record.patient_ids.value" />
+                            <img t-att-src="activity_image('hospital.patient', 'image', record.patient_id.raw_value)" t-att-title="record.patient_id.value" t-att-alt="record.patient_id.value" />
                             <div>
                                 <field name="ref" display="full"/>
                             </div>
@@ -27,7 +27,7 @@
             <field name="arch" type="xml">
             <!-- Tree line decoration colors -->
             <tree decoration-success="state == 'done'" decoration-info="state in ('in_consultation','draft')" sample="1" multi_edit="1">
-                <field name="patient_ids" />
+                <field name="patient_id" />
                 <!-- Optional for dynamic tree view -->
                 <field name="name" />
                 <field name="ref" optional="show"/>
@@ -70,7 +70,7 @@
                     </div>
                     <group>
                         <group>
-                            <field name="patient_ids" />
+                            <field name="patient_id" />
                             <field name="ref" />
                             <field name="doctor_id" widget="many2one_avatar_user"/>
                             <field name="gender" />
