--- a/custom_addons/om_hospital/views/patient_tag_view.xml
+++ b/custom_addons/om_hospital/views/patient_tag_view.xml
@@ -23,6 +23,7 @@
                     <group>
                         <group>
                             <field name="name" />
+                            <field name="sequence" />
                         </group>
                         <group>
                             <!-- Active Toggle Widget -->
