Added compute function for counting Appointments

--- a/custom_addons/om_hospital/views/patient_view.xml
+++ b/custom_addons/om_hospital/views/patient_view.xml
@@ -30,6 +30,7 @@
                             <field name="date_of_birth" />
                             <field name="age" />
                             <field name="appointment_id" />
+                            <field name="appointment_count" />
                         </group>
                         <group>
                             <field name="ref" />
