--- a/custom_addons/om_hospital/views/patient_view.xml
+++ b/custom_addons/om_hospital/views/patient_view.xml
@@ -23,18 +23,24 @@
             <field name="arch" type="xml">
             <form>
                 <sheet>
-                    <field name="image" widget="image" class="oe_avatar" /> 
+                    <field name="image" widget="image" class="oe_avatar" />
+                    <div class="oe_title">
+                        <h4>
+                            <field name="ref" readonly="1"/>
+                        </h4>
+                        <h2>
+                            <label for="name" string="Name" class="oe_edit_only" />
+                            <field name="name" />
+                        </h2>
+                    </div>
                     <group>
                         <group>
-                            <field name="name" />
                             <field name="date_of_birth" />
                             <field name="age" />
-                            <field name="appointment_id" />
-                            <field name="appointment_count" />
                         </group>
                         <group>
-                            <field name="ref" />
                             <field name="gender" invisible="context.get('hide_gender')"/>
+                            <!-- Tag color  -->
                             <field name="tag_ids" widget="many2many_tags" options="{'color_field': 'color'}"/>
                             <!-- Archive -->
                             <field name="active" invisible="1"/>
@@ -42,9 +48,11 @@
                         </group>
                         <group string="Other Information" name="other_info">
                             <group>
-                                <field name="parent" attrs="{'invisible':['|',('age','>',18),('gender','=','male')]}"/>
-                                <field name="martial_status" />
-                                <field name="partner_name" />
+                                <!-- Field required and invisible based on age with condition -->
+                                <field name="parent" attrs="{'invisible':[('age','&gt;=',18)]}"/>
+                                <field name="martial_status" attrs="{'invisible':[('age','&lt;=',18)]}"/>
+                                <field name="partner_name" attrs="{'readonly':[('martial_status','!=','married')],
+                                                                    'required':[('martial_status','=','married')]}"/>
                             </group>
                         </group>
                     </group>
