Added marks and cross button in Appointment's tree

--- a/custom_addons/om_hospital/views/appointment_view.xml
+++ b/custom_addons/om_hospital/views/appointment_view.xml
@@ -42,6 +42,8 @@
                 <field name="activity_ids" widget="list_activity" />
                 <!-- State badge decoration success,info,danger,muted,warning -->
                 <field name="state" widget="badge" decoration-success="state == 'done'" decoration-info="state in ('in_consultation','draft')" decoration-muted="state == 'cancel'" />
+                <button name="action_done" type="object" class="fa fa-check btn-success" attrs="{'invisible': [('state', '!=', 'in_consultation')]}"/>
+                <button name="%(om_hospital.action_cancel_appointment)d" type="action" context="{'default_appointment_id' : active_id,'hide_appointment': 1}" class="fa fa-times btn-danger" attrs="{'invisible': [('state', 'not in', ('draft','in_consultation'))]}"/>
             </tree>
             </field>
         </record>
